# json-format-in-parquet-benchmark

./: .gitignore  Cargo.toml  README.md
benches/: encode.rs  flush.rs  query.rs
examples/: events.json
json/: canada.json  citm_catalog.json  events_ndv_0.1_1024.json  events_ndv_0.1_8192.json  events_ndv_0.3.json  events_ndv_0.3_1024.json  events_ndv_0.3_8192.json  events_ndv_0.6.json  events_ndv_0.6_1024.json  events_ndv_0.6_8192.json  events_ndv_1.json  events_ndv_1_1024.json  events_ndv_1_8192.json  logs.json  tags.json  tags_with_time.json  trace.json  twitter.json
scripts/: benchmark_results.csv  json-generator.py  plot.py
src/: codec.rs  consts.rs  lib.rs
src/format/: formats.rs  jsonb.rs  jsonc.rs  macros.rs  mod.rs  plain_json.rs  variant.rs
src/formats/: jsonb.rs
