[package]
name = "json-format-in-parquet-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonb = { git = "https://github.com/datafuselabs/jsonb", branch = "main" }
jsonc = { git = "https://github.com/CookiePieWw/jsonc", branch = "master" }
arrow = { version = "52.0.0", features = ["prettyprint"] }
parquet = { version = "52.0.0" }
criterion = { version = "0.4", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "encode"
harness = false

[[bench]]
name = "flush"
harness = false

[profile.bench]
debug = true
